<resources>
    <string name="app_name">Kiro</string>
    <string name="device">Perangkat</string>
    <string name="time">Waktu</string>
    <string name="date_and_time">Waktu &amp; Tanggal</string>
    <string name="prayer_time">Waktu Adzan</string>
    <string name="next">Selanjutnya</string>
    <string name="ongoing">Sedang berlangsung</string>

    <string name="fajr">Subuh</string>
    <string name="dhuhr">Dzuhur</string>
    <string name="asr">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isya</string>

    <string name="fajr_format">Subuh %1$s</string>
    <string name="dhuhr_format">Dzuhur %1$s</string>
    <string name="asr_format">Ashar %1$s</string>
    <string name="maghrib_format">Maghrib %1$s</string>
    <string name="isha_format">Isya %1$s</string>

    <string name="minute_format">%1$d menit</string>
    <string name="positive_minute_format">+%1$d menit</string>
    <string name="minutes_format">%1$d menit</string>
    <string name="positive_minutes_format">+%1$d menit</string>
    <string name="elevation_format">%1$d mdpl</string>

    <string name="latitude_north">LU</string>
    <string name="latitude_south">LS</string>
    <string name="longitude_east">BT</string>
    <string name="longitude_west">BB</string>

    <string name="sunday">Minggu</string>
    <string name="monday">Senin</string>
    <string name="tuesday">Selasa</string>
    <string name="wednesday">Rabu</string>
    <string name="thursday">Kamis</string>
    <string name="friday">Jumat</string>
    <string name="saturday">Sabtu</string>

    <string name="invalid_time">--:--</string>
    <string name="inactive">Tidak aktif</string>
    <string name="qiro">Qiro</string>
    <string name="qiro_schedule">Jadwal Qiro</string>
    <string name="setting">Pengaturan</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Terhubung</string>
    <string name="disconnected">Tidak Terhubung</string>
    <string name="date">Tanggal</string>
    <string name="location">Lokasi</string>
    <string name="latitude">Lintang</string>
    <string name="longitude">Bujur</string>
    <string name="about">Tentang</string>
    <string name="security">Keamanan</string>
    <string name="version">Versi</string>
    <string name="elevation">Ketinggian</string>
    <string name="exit">Keluar</string>
    <string name="continues">Lanjutkan</string>
    <string name="not_now">Lain Kali</string>

    <string name="loc_permission_rationale">Kiro membutuhkan akses lokasi untuk menemukan perangkat terdekat dengan mudah. Akses lokasi juga dibutuhkan untuk memilih koordinat pada peta.</string>
    <string name="no_location_rationale">Kiro tidak dapat berjalan tanpa izin lokasi.</string>
    <string name="permit">Izinkan</string>
    <string name="masl">mdpl</string>
    <string name="save">Simpan</string>
    <string name="use_system_time">Gunakan waktu sistem</string>
    <string name="wifi">WiFi</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="duration">Durasi</string>
    <string name="playlist">Daftar Putar</string>
    <string name="choose_audio">Pilih Audio</string>
    <string name="search">Cari...</string>
    <string name="last_result">Pencarian terakhir</string>
    <string name="prayer_time_correction">Koreksi Waktu Sholat</string>
    <string name="available_devices">Perangkat Tersedia</string>
    <string name="no_devices_found">Perangkat tidak ditemukan</string>
    <string name="connect_device">Hubungkan Perangkat</string>
    <string name="enter_password">Masukkan kata sandi.</string>
    <string name="choose">Pilih</string>
    <string name="volume">Volume</string>
    <string name="apply">Terapkan</string>
    <string name="close">Tutup</string>
    <string name="turn_off">Matikan</string>
    <string name="surah_force_stop_description">Anda yakin ingin menghentikan daftar putar saat ini?</string>
    <string name="stop">Hentikan</string>
    <string name="updating_playlist">Memperbarui playlist..</string>
    <string name="device_not_connected">Perangkat tidak terhubung</string>
    <string name="find_device">Cari Perangkat</string>
    <string name="cannot_connect_to_device">Tidak dapat terhubung ke perangkat</string>
    <string name="device_connection_lost">Sambungan perangkat terputus</string>
    <string name="updated_successfully">Berhasil diperbarui</string>
    <string name="playlist_stopped_successfully">Daftar putar telah dihentikan</string>
    <string name="play">Putar</string>
    <string name="and_more_format">dan %1$d lainnya</string>
    <string name="item_selected_format">%1$d file dipilih</string>
</resources>