<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:background="@drawable/ic_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_drawable"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_permission"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dm_sans"
            android:text="@string/loc_permission_rationale"
            android:textColor="@color/text_primary"
            android:textSize="15sp"
            android:lineSpacingMultiplier="1.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            android:gravity="center_vertical|end">

            <TextView
                android:id="@+id/tv_not_now"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/dm_sans"
                android:gravity="center"
                android:text="@string/not_now"
                android:textColor="@color/secondary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_continue"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_continue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/dm_sans"
                android:gravity="center"
                android:text="@string/continues"
                android:textColor="@color/secondary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>