<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_location_off"
            android:tint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/dm_sans"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.2"
            android:gravity="center_horizontal"
            android:text="@string/no_location_rationale"
            android:textColor="@color/text_primary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_permit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/green"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/dm_sans"
                android:gravity="center"
                android:text="@string/permit"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_exit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/red"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_permit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/dm_sans"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>