<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:ignore="SpUsage">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:backgroundColor="@color/background" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_elevation"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:cardBackgroundColor="@color/background_secondary"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_my_location"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintStart_toStartOf="@+id/cardView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:labelFor="@+id/et_elevation"
                android:text="@string/elevation"
                android:textColor="@color/text_default"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_elevation"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="@color/transparent"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="@color/text_primary"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="604" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@color/transparent"
                android:text="@string/masl"
                android:textColor="@color/text_default"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_elevation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/background_secondary"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/cv_my_location"
        app:layout_constraintEnd_toStartOf="@id/cv_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cv_my_location">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tv_latitude"
                android:text="@string/latitude"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_default"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/text_primary"
                android:textSize="16dp"
                tools:text="-7.124315" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/background_secondary"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/cv_save"
        app:layout_constraintEnd_toStartOf="@id/cv_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cv_save">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:labelFor="@+id/tv_longitude"
                android:text="@string/longitude"
                android:textColor="@color/text_default"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:textColor="@color/text_primary"
                android:textSize="16dp"
                tools:text="115.53421" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_my_location"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/background_secondary"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_save"
        app:layout_constraintEnd_toEndOf="@+id/cv_save">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_round_my_location"
            android:tint="@color/blue" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_save"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/background_secondary"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/map_view"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_round_check"
            android:tint="@color/primary" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>